# ls-3d-premium-plus

./: .gitignore  CMakeLists.txt  README.md  launchMatEditor.bat  pack_game.sh
CustomExecutable/: CMakeLists.txt  ExGame  custom_main.cpp
Game/Content/maps/: explorer.json
Game/Content/mat/: files.exmtl  floor.exmtl  folder.exmtl
Game/Content/mat_dev/: files.draft  floor.draft  folder.draft
Game/Content/meshes/: file.msh  folder.msh
Game/Engine/ShaderFragments/: BumpMap.txt  FragHead.txt  FragHead_PBR.txt  PostProcessing_FragHead.txt  ProcessShadows.txt  VertShader.vert
Game/Engine/Shaders/glsl/: Beauty.frag  Debug.frag  Debug.vert  Gshad.vert  Light.frag  PostProcessing.vert  Shadow.frag  Shadow.vert  ShadowCalc.frag  TextRender.frag  (+1 more)
Include/EXPGE/: BD_LightDB_RW.h  BD_MatRW.h  BD_Reader.h  BD_Writer.h  BoxVol.h  BulldozerFileManager.h  EXP_Actor.h  EXP_Callbacks.h  EXP_Camera.h  EXP_Component.h  EXP_DirLight.h  EXP_GUI_Button.h  EXP_GUI_ColorCache.h  EXP_GUI_ImageTexture.h  EXP_Game.h  EXP_GuiManager.h  EXP_HotLoad.h  EXP_InputHandler.h  EXP_InstanciatedMesh.h  EXP_Level.h  EXP_MapLoader.h  EXP_MeshBuilder.h  EXP_PhysicsHandler.h  EXP_PointLight.h  EXP_PostProcessEffect.h  EXP_RigidBody.h  EXP_SoundEmitter.h  EXP_StaticMesh.h  EXP_Structs.h  EXP_TextSurface.h  PS_Emitter.h  PS_Listener.h  PS_SoundVolume.h  PhysicaSound.h  RD_Callback.h  RD_Camera.h  RD_Cubemap.h  RD_DirLight.h  RD_Error.h  RD_FrameBuffer.h  (+28 more)
Lib/Debug/: BulldozerFileManager.lib  RaindropRenderer.lib
Lib/Release/: ExpansionGameEngineCore.lib  ExpansionMath.lib  PhysicaSound.lib
blend files/: file.blend  file.blend1  folder.blend  folder.blend1
blend files/FBX/: cube.fbx  file.fbx  folder.fbx  sphere.fbx
ls-3d-premium-plus/: CMakeLists.txt  Character.cpp  Character.h  Explorer.cpp  Explorer.h  Makefile  framework.h  ls-3d-premium-plus.sln  ls-3d-premium-plus.vcxproj  ls-3d-premium-plus.vcxproj.filters
(+35 files in other folders)
